25-helm-experiments/example/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  type: NodePort  # Statt ClusterIP
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
