25-helm-experiments/example/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: demo-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 3000
